app.css
/* app css stylesheet */
html,
body {
  font-family: 'Lato', sans-serif;
  background: -webkit-linear-gradient(#ffffff 60%, #e5daf0);
  background: -moz-linear-gradient(#ffffff 60%, #e5daf0);
  background: -o-linear-gradient(#ffffff 60%, #e5daf0);
  background: linear-gradient(#ffffff 60%, #e5daf0);
}

/*.header {
  position: absolute;
  left: 0px;
  right: 0px;
}*/

/*Main*/

.container {
  width:100%;
  margin: 0 auto;
}

.centered {
  margin: 0 auto;
  text-align: center;
}

.inline-list {
  margin: 0;
  padding-left: 0;
  list-style-type: none;
}

.inline-list > li {
  display: inline;
  list-style-type: none;
  padding: 0px 5px 0px 5px;
}


/*Nav Stuff*/

#navigation {
  position: fixed;
  top: 0;
  width: 100%;
  height: 50px;
  text-align: center;
  padding-top: 25px;
  z-index: 99;
}

#navigation li {
  display: inline;
  color: #7465d2;
  text-transform: uppercase;
  font-family: 'Lato', 'Helvetica', sans-serif;
  font-size: 24px;
}

#navigation a {
  color: #7465d2;
  font-size: 14px;
  padding: 0px 40px 0px 40px;
  text-decoration: none !important;
}

#navigation a:hover {
  color: #a698ff;
}

/*Home*/

.title {
  margin-left: auto;
  margin-right: auto;
}

.title h2{
  margin-top: -22px;
  color: #7465d2;
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: 300;
  z-index: 10;
}

.title img{
  margin: 0 auto;
  width: 500px;
  max-width: 90%;
  margin-top: 12%;
}

.name {
  background: transparent url("assets/img/name.png") no-repeat scroll 0% 0% / 500px 130px;
  width: 500px;
  height: 130px;
  margin-top: 10%;
  margin-left: auto;
  margin-right: auto;
}

.social {
  padding-top: 15px;
}

.social a {
  color: #7465d2;
  -webkit-transition: all .2s ease-in-out;
  -moz-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

/*About*/

.about {
  width:500px;
  margin-left: auto;
  margin-right: auto;

}

.about p{
  text-align: left;
  font-size: 14px;
  font-weight: 300;
  margin-top: 12%;
}

